Allow kernel to be downloaded by single branch only, and customise the source description

--- a/toolchain/kernel-headers/Makefile
+++ b/toolchain/kernel-headers/Makefile
@@ -19,6 +19,9 @@ PKG_VERSION:=$(LINUX_VERSION)
 PKG_SOURCE:=$(LINUX_SOURCE)
 ifneq ($(call qstrip,$(CONFIG_KERNEL_GIT_CLONE_URI)),)
   PKG_SOURCE_PROTO:=git
+ifeq ($(CONFIG_DOWNLOAD_KERNEL_SINGLE_BRANCH),y)
+    PKG_SOURCE_OPTS:=--depth 1 --single-branch --branch $(CONFIG_KERNEL_GIT_REF)
+endif
   PKG_SOURCE_URL:=$(call qstrip,$(CONFIG_KERNEL_GIT_CLONE_URI))
   PKG_SOURCE_VERSION:=$(call qstrip,$(CONFIG_KERNEL_GIT_REF))
   PKG_MIRROR_HASH:=$(call qstrip,$(CONFIG_KERNEL_GIT_MIRROR_HASH))
