--- a/config/Config-devel.in
+++ b/config/Config-devel.in
@@ -105,6 +105,22 @@ menuconfig DEVEL
 		  It can be a git hash or a branch name.
 		  If unused, the clone's repository HEAD will be checked-out.
 
+	config KERNEL_GIT_REF_DESC
+		string "Enter git ref description" if DEVEL
+		depends on (KERNEL_GIT_REF != "")
+		default ""
+		help
+		  Enter the git ref description used to describe the git checkout repository
+		  after it is cloned, and before making it a tar-ball.
+		  If unused, the clone's repository HEAD will be checked-out.
+
+	config DOWNLOAD_KERNEL_SINGLE_BRANCH
+		bool "Request kernel download from GIT repository single branch" if DEVEL
+		default n
+		help
+            	  If enabled, the target kernel source will be assumed to be downloaded
+                  from GIT repository single branch with depth of 1.
+
 	config KERNEL_GIT_MIRROR_HASH
 		string "Enter hash of Git kernel tree source checkout tarball" if DEVEL
 		depends on (KERNEL_GIT_CLONE_URI != "")
