Add Murata Wireless and Bluetooth firmware

--- a/package/firmware/cyw-bt-patch/Makefile
+++ b/package/firmware/cyw-bt-patch/Makefile
@@ -7,15 +7,17 @@
 
 include $(TOPDIR)/rules.mk
 
-PKG_NAME:=cyw-bt-firmware
+PKG_NAME:=cyw-bt-patch
 
 PKG_SOURCE_PROTO:=git
-PKG_SOURCE_URL:=https://github.com/namezis/cyw-bt-patch
-PKG_SOURCE_VERSION:=v1.0
+PKG_SOURCE_URL:=https://github.com/murata-wireless/cyw-bt-patch
+PKG_SOURCE_VERSION:=HEAD
+
+PKG_MAINTAINER:=Tomasz Zeman <tomasz.zeman@gmail.com>
 
 include $(INCLUDE_DIR)/package.mk
 
-define Package/cyw-bt-firmware
+define Package/cyw-bt-patch
   PKGARCH:=all
   SECTION:=firmware
   CATEGORY:=Firmware
@@ -23,13 +25,17 @@ define Package/cyw-bt-firmware
 endef
 
 define Build/Compile
+	true
 endef
 
-define Package/cyw-bt-firmware/install
+define Package/cyw-bt-patch/install
 	$(INSTALL_DIR) $(1)/lib/firmware/brcm
 	$(INSTALL_DATA) \
-	    $(PKG_BUILD_DIR)/CYW43430A1.1DX.hcd \
+	    $(PKG_BUILD_DIR)/LICENCE.cypress \
+	    $(1)/lib/firmware/LICENCE.cypress.bt-patch
+	$(INSTALL_DATA) \
+	    $(PKG_BUILD_DIR)/BCM4343A1_*.1DX.hcd \
 	    $(1)/lib/firmware/brcm/BCM43430A1.hcd
 endef
 
-$(eval $(call BuildPackage,cyw-bt-firmware))
+$(eval $(call BuildPackage,cyw-bt-patch))
