--- a/package/utils/gobbledegook/Makefile
+++ b/package/utils/gobbledegook/Makefile
@@ -16,6 +16,7 @@ PKG_SOURCE_URL:=https://github.com/namezis/gobbledegook.git
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
 PKG_SOURCE_VERSION:=$(PKG_VERSION)
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
+PKG_MIRROR_HASH:=661c69bfa91bc02e8cad4662f78230074b96776cabd76262c0a681b15a39830a
 
 PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-$(PKG_VERSION)
 
